Made SVM model linear, added predictions using common features for comparison with our added features

--- a/Models/ProfitablePredictionModels.ipynb
+++ b/Models/ProfitablePredictionModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "\n",
     "knn_clf = KNeighborsClassifier()\n",
     "\n",
-    "svm_clf = svm.SVC()\n",
+    "svm_clf = svm.SVC(kernel='linear', max_iter=1000000)\n",
     "\n",
     "def is_positive(row):\n",
     "    if row > 0:\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predictions With All Numeric Features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KNN Training accuracy: 0.916\n",
-      "KNN Testing accuracy: 0.58734939759\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "knn_clf.fit(training_data, training_labels)\n",
     "train_predicted_labels = knn_clf.predict(training_data)\n",
@@ -91,22 +89,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVM Training accuracy: 1.0\n",
-      "SVM Testing accuracy: 0.469879518072\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "svm_clf.fit(training_data, training_labels)\n",
     "train_predicted_labels = svm_clf.predict(training_data)\n",
     "test_predicted_labels = svm_clf.predict(testing_data)\n",
+    "\n",
+    "training_accuracy = accuracy_score(training_labels, train_predicted_labels)\n",
+    "testing_accuracy = accuracy_score(testing_labels, test_predicted_labels)\n",
+    "\n",
+    "print \"SVM Training accuracy: \" + str(training_accuracy)\n",
+    "print \"SVM Testing accuracy: \" + str(testing_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predictions Without Our Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data_common_feaures = training_data[[\"min_age\", \"runtime(min)\", \"metacriticRating\", \"YearReleased\", \"MonthReleased\", \"Production Budget\"]]\n",
+    "testing_data_common_features = testing_data[[\"min_age\", \"runtime(min)\", \"metacriticRating\", \"YearReleased\", \"MonthReleased\", \"Production Budget\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn_clf.fit(training_data_common_feaures, training_labels)\n",
+    "train_predicted_labels = knn_clf.predict(training_data_common_feaures)\n",
+    "test_predicted_labels = knn_clf.predict(testing_data_common_features)\n",
+    "\n",
+    "training_accuracy = accuracy_score(training_labels, train_predicted_labels)\n",
+    "testing_accuracy = accuracy_score(testing_labels, test_predicted_labels)\n",
+    "\n",
+    "print \"KNN Training accuracy: \" + str(training_accuracy)\n",
+    "print \"KNN Testing accuracy: \" + str(testing_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_clf.fit(training_data_common_feaures, training_labels)\n",
+    "train_predicted_labels = svm_clf.predict(training_data_common_feaures)\n",
+    "test_predicted_labels = svm_clf.predict(testing_data_common_features)\n",
     "\n",
     "training_accuracy = accuracy_score(training_labels, train_predicted_labels)\n",
     "testing_accuracy = accuracy_score(testing_labels, test_predicted_labels)\n",
